feat: add active pages and websocket mock server and finish frontend (for now)

--- a/website/src/app.css
+++ b/website/src/app.css
@@ -49,3 +49,8 @@ body {
   margin-left: auto;
   position: absolute;
 }
+
+@font-face {
+  font-family: digitalnumbers;
+  src: url('/DigitalNumbers-reduced.ttf');
+}
